[package]
name = "wasm-memx"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_math = "0.16.1"
galm = "0.3.1"
js-sys = "0.3.47"
wasm-bindgen = "0.2.88"
web-sys = { version = "0.3.47", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
] }
getrandom = { version = "0.2", features = ["js"] }
imp = "0.1.0"
