[package]
name = "rust"
version = "0.1.0"
edition = "2021"                              # 保持最新版以获得最佳功能和性能
authors = ["Frank <jasonming1998@gamil.com>"] # 建议添加作者信息
description = "Your project description"      # 建议添加项目描述
license = "MIT OR Apache-2.0"                 # 建议添加许可证

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
 
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.77"
cfg-if = "1.0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
